--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -67,6 +67,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DoubleToShortPercentageConverter.cs" />
+    <Compile Include="DownloadAudioItem.cs" />
     <Compile Include="DownloadItem.cs" />
     <Compile Include="DownloadVideoItem.cs" />
     <Compile Include="WndwInfoSelector.xaml.cs">
