--- a/YTRip/packages.config
+++ b/YTRip/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="3.3239.1723" targetFramework="net461" />
+  <package id="cef.redist.x86" version="3.3239.1723" targetFramework="net461" />
+  <package id="CefSharp.Common" version="63.0.2" targetFramework="net461" />
+  <package id="CefSharp.Wpf" version="63.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net461" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net461" />
