String implementation of DownloadProgress var and better comments.

--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -95,7 +95,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DoubleToShortPercentageConverter.cs" />
+    <Compile Include="StringToDoubleConverter.cs" />
     <Compile Include="DownloadAudioItem.cs" />
     <Compile Include="DownloadItem.cs" />
     <Compile Include="DownloadVideoItem.cs" />
