Add textbox for URL, top buttons and forward + backward image

--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -150,6 +150,11 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\BackwardArrow.png" />
+    <Resource Include="Resources\ForwardArrow.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
