--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -150,7 +150,9 @@
   <ItemGroup>
     <Resource Include="icon.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Refresh.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\BackwardArrow.png" />
     <Resource Include="Resources\ForwardArrow.png" />
