Add download image

--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -157,6 +157,9 @@
     <Resource Include="Resources\BackwardArrow.png" />
     <Resource Include="Resources\ForwardArrow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Download.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
