--- a/YTRip/YTRip.csproj
+++ b/YTRip/YTRip.csproj
@@ -95,6 +95,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands.cs" />
     <Compile Include="StringToDoubleConverter.cs" />
     <Compile Include="DownloadAudioItem.cs" />
     <Compile Include="DownloadItem.cs" />
